# game-engine

./: CMakeLists.txt  plugins.cfg  resources.cfg
include/: gameengine.h  inputmanager.h  intro_state.h  keyboard.h  keys.h  mouse.h  ogrerenderengine.h  oisinputmanager.h  play_state.h  renderengine.h  singleton.h  state.h  timer.h
src/: game.cc  gameengine.cc  inputmanager.cc  intro_state.cc  keyboard.cc  mouse.cc  ogrerenderengine.cc  oisinputmanager.cc  play_state.cc  timer.cc
